prettierの設定を追加

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,5 +27,9 @@
     "json-server": "^0.15.0",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.10"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
   }
 }
