--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "json-mock": "npx json-server --watch db.json --routes routes.json --port 5000",
+    "json-mock": "npx json-server --watch db.json --routes routes.json",
     "download-fonts": "npx get-google-fonts -i https://fonts.googleapis.com/css?family=M+PLUS+1p -o ./public/static/fonts"
   },
   "dependencies": {
