--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -13,9 +13,10 @@ flask = "*"
 flask-restful = "*"
 opencv-python = "*"
 flask-sqlalchemy = "*"
+numpy = "==1.19.3"
 
 [requires]
-python_version = "3.8"
+python_version = "3.9"
 
 [scripts]
 start = "python yukari.py '../frontend/dist/'"
