--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -13,7 +13,7 @@ flask = "*"
 flask-restful = "*"
 opencv-python = "*"
 flask-sqlalchemy = "*"
-numpy = "==1.19.3"
+numpy = "*"
 
 [requires]
 python_version = "3.9"
